# cs240

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  main.preprocss
assignments/: CMakeLists.txt
assignments/1/: Coding_2.MD  README.MD  coding_1.c  coding_2.c
assignments/2/: CMakeLists.txt  Coding_2.MD  README.MD  coding_1.MD  coding_1.c  coding_2.c  inputs.txt
assignments/3/: README.MD  coding_1.MD  coding_1.c  coding_2.MD  coding_2.c
assignments/4/: CMakeLists.txt  README.MD  coding_1.MD  coding_2.MD
assignments/5/: CMakeLists.txt  README.MD  coding_1.c  coding_2.MD
assignments/6/: CMakeLists.txt  coding_1.MD  coding_2.MD
basic_data_types/: CMakeLists.txt  array_demo.c  constants.c  integer_memory_format.c  ints.c  printf_demo.c  unsigned.c
build-support/: cmake-defaults.cmake
client/: CMakeLists.txt  main.c  stdio_demo.c  string_client.c  utils_test.c  utils_test.h
data/: 1342-0.txt  ints.txt  short.txt
function/: CMakeLists.txt  block_scope.c  commandline_arg.c  extern_demo.c  extern_static.c  extern_static_client.c  function_demo.c  function_demo1.c  function_demo2.c  getChar_demo.c  local_static.c  stack_demo.c  stack_overflow.c
gcc_options/: hello.c  main.c  main.pre.txt  makefile
lec3/: CMakeLists.txt  main.c  main2.c
lec4/: CMakeLists.txt  main.c
lib/: CMakeLists.txt
lib/client/: CMakeLists.txt  bt_client_demo.c  comparator_client.c  const_demo_client.c  enum_demo.c  errorno_demo.c  fixed_data_types_client.c  function_pointers_demo..c  hashtable_demo_client.c  linked_demo_client.c  padding_demo_client.c  padding_endianess_demo_client.c  pointer_continued2.c  pointer_contiued.c  pointer_intro.c  process_demo.c  resizing_array_demo_client.c  stream_buffer_demo_client.c  stream_demo.c  struct_intro_client.c  struct_passing_demo.c  struct_passing_julian.c  utils_client.c
lib/clients/: ArrayQueueClient.c  CMakeLists.txt
lib/header/: bt.h  comparator.h  fixed_data_types.h  hash_table.h  linked.h  list.h  resizing_array.h  utils.h
lib/headers/: ArrayList.h  ArrayStack.h  Integer.h  substring.h  utils.h
lib/src/: ArrayList.c  ArrayQueue.c  Integer.c  bt.c  comparator.c  fixed_data_types.c  hash_table.c  linked.c  list.c  resizing_array.c  utils.c
lib/src/string/: substring.c
lib_demo/: CMakeLists.txt  client.c  comiple_time_macto.c  main.c
lib_demo/headers/: printf_header.h  utils.h
lib_demo/src/: utils.c
src/clients/: CMakeLists.txt
src/clients/function_demo/: block_scope.c  extern_static_demo.c  function_demo.c  function_recursion_layout.c  main.c  memory_array_layout.c  seg_falut_demo.c
src/clients/header_file_demo/: demo.h  main.c  main.h
src/clients/lec1/: main.c
src/clients/lec2/: CMakeLists.txt  main.c
src/clients/lec3/: address.c  constants_demo.c
src/clients/lec4/: CMakeLists.txt  character_array.c
src/clients/lec5/: CMakeLists.txt  main.c  stdin_demo.c
src/clients/lec5_stdio/: main.c
src/clients/pointer/: compator.c  dynamic_memory.c  owned_memory.c  pointer_2_array.c  pointer_demo1.c  pointer_intro.c  qsorting_demo.c  return_stack_mem.c  sorting_demo.c
src/clients/struct/: bit_operation.c  linked_list.c  struct_demo.c  union_endianess.c
src/clients/terminal_demo/: main.whatever  main_redir.c
src/clients/using_lib/: main.c
src/lec3/: CMakeLists.txt  constants.c  main.c  typecasting.c
src/lec4/: CMakeLists.txt  array.c  switch.c
src/lec5/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt
src/lib/include/cs240/: linked_list.h  range_minimum.h  utils.h
src/lib/src/: linked_list.c  range_minimum.c  utils.c  utils1.c
src/terminal_demo/: main.c
string/: CMakeLists.txt  reverse_string.c
tests/: CMakeLists.txt  hello_test.cpp
