add_executable(utils_client.out utils_client.c)
target_link_libraries(utils_client.out cs240-lib)

add_executable(pointer_intro.out pointer_intro.c)
add_executable(pointer_contiued.out pointer_contiued.c)
add_executable(pointer_continued2.out pointer_continued2.c)
add_executable(const_demo_client.out const_demo_client.c)


add_executable(comparator_client.out comparator_client.c)
target_link_libraries(comparator_client.out cs240-lib)