add_executable(utils_client.out utils_client.c)
target_link_libraries(utils_client.out cs240-lib)

add_executable(pointer_intro.out pointer_intro.c)
add_executable(pointer_contiued.out pointer_contiued.c)
add_executable(pointer_continued2.out pointer_continued2.c)
add_executable(const_demo_client.out const_demo_client.c)

add_executable(function_pointers_demo.out function_pointers_demo..c)
target_link_libraries(function_pointers_demo.out cs240-lib)

add_executable(comparator_client.out comparator_client.c)
target_link_libraries(comparator_client.out cs240-lib)

add_executable(fixed_data_types_client.out fixed_data_types_client.c)
target_link_libraries(fixed_data_types_client.out cs240-lib)

add_executable(struct_intro_client.out struct_intro_client.c)
target_link_libraries(struct_intro_client.out cs240-lib)

add_executable(linked_demo_client.out linked_demo_client.c)
target_link_libraries(linked_demo_client.out cs240-lib)

add_executable(resizing_array_demo_client.out resizing_array_demo_client.c)
target_link_libraries(resizing_array_demo_client.out cs240-lib)

add_executable(bt_client_demo.out bt_client_demo.c)
target_link_libraries(bt_client_demo.out cs240-lib)

add_executable(padding_demo_client.out padding_demo_client.c)
target_link_libraries(padding_demo_client.out cs240-lib)

